--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
     "gatsby": "^2.23.10",
+    "gatsby-plugin-material-ui": "^2.1.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
