--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@material-ui/core": "^4.10.2",
     "gatsby": "^2.23.10",
     "gatsby-plugin-material-ui": "^2.1.9",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.2"
