--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "gatsby": "^2.23.10",
+    "gatsby-image": "^2.4.12",
     "gatsby-plugin-material-ui": "^2.1.9",
+    "gatsby-plugin-sharp": "^2.6.17",
+    "gatsby-source-contentful": "^2.3.22",
+    "gatsby-source-filesystem": "^2.3.16",
+    "gatsby-transformer-sharp": "^2.5.10",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
